manifests/php-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-app
  labels: { app: php-app }
spec:
  selector: { app: php-app }
  ports:
  - name: http
    port: 8080
    targetPort: 8080
