manifests/php-app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: php-app
  labels: { app: php-app }
spec:
  to:
    kind: Service
    name: php-app
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
